Remove reference to deleted directory in clangd settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "clangd.fallbackFlags": [
         "-ffreestanding",
-        "-std=c++26",
-        "-I../setup"
+        "-std=c++26"
     ]
 }
