Add Clang toolchain and presets
- Add riscv64-unknown-elf-clang-toolchain.cmake for Clang support
- Add clang-debug and clang-release presets in CMakePresets.json
- Update .gitignore to allow clang toolchain file
- Update cmake/settings.cmake to not pass redundant flag to assembler
- Update .vscode/settings.json to make clangd use CMake-generated compile_commands.json

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ build/
 CMakeUserPresets.json
 cmake/*-toolchain.cmake
 !cmake/riscv64-unknown-elf-gcc-toolchain.cmake
+!cmake/riscv64-unknown-elf-clang-toolchain.cmake
