Move initialization logic from assembly and C++ to C code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 4.1)
 
-project(cpp-bare-metal LANGUAGES CXX ASM)
+project(cpp-bare-metal LANGUAGES C CXX ASM)
 
 if(NOT CMAKE_SYSTEM STREQUAL "Generic" OR NOT CMAKE_SYSTEM_PROCESSOR STREQUAL "riscv64")
     message(FATAL_ERROR "This project can only be built for freestanding riscv64")
@@ -14,7 +14,7 @@ target_sources(program.elf PRIVATE
     src/main.cpp
     src/runtime-main.cpp
     src/entry.s
-    src/exception.cpp
+    src/init.c
     src/new.cpp
     src/syscalls.cpp
     src/uart.cpp
